[package]
name = "init"
version = "0.1.0"
edition = "2021"
description = "INIT - The Beginning of Local Super-Intelligence"
authors = ["lvs0"]
license = "MIT"
repository = "https://github.com/lvs0/Init-"

[[bin]]
name = "init"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
